--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .env
 .env.local
-
+.gitignore
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
