--- a/createSolNFT/package.json
+++ b/createSolNFT/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@metaplex-foundation/js": "^0.18.1",
+    "@solana/spl-token": "^0.3.7",
     "@solana/web3.js": "^1.73.2"
   }
 }
