--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
 	"repository": "https://github.com/DigiDivers/DigiDiversSmartContracts.git",
 	"author": "steven arellano <stevenjarellano2@gmail.com>",
 	"license": "MIT",
+	"scripts": {
+		"build": "tsc",
+		"start": "ts-node ./src/index.ts",
+		"lint": "eslint . --ext .ts"
+	},
 	"dependencies": {
 		"@metaplex-foundation/js": "^0.18.1",
 		"@solana/spl-token": "^0.3.7",
@@ -14,12 +19,16 @@
 		"express": "~4.16.1",
 		"http-errors": "~1.6.3",
 		"jade": "~1.11.0",
+		"js-base64": "^3.7.5",
 		"morgan": "~1.9.1"
 	},
 	"devDependencies": {
-		"typescript": "^4.9.5",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.17",
-		"@types/morgan": "^1.9.4"
+		"@types/morgan": "^1.9.4",
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
+		"eslint": "^8.34.0",
+		"typescript": "^4.9.5"
 	}
 }
