--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	"scripts": {
 		"build": "tsc",
 		"start": "ts-node ./src/index.ts",
-		"lint": "eslint . --ext .ts"
+		"lint": "eslint . --ext .ts",
+		"test": "jest"
 	},
 	"dependencies": {
 		"@metaplex-foundation/js": "^0.18.1",
@@ -25,10 +26,13 @@
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.17",
+		"@types/jest": "^29.4.0",
 		"@types/morgan": "^1.9.4",
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
 		"@typescript-eslint/parser": "^5.53.0",
 		"eslint": "^8.34.0",
+		"jest": "^29.4.3",
+		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.5"
 	}
 }
